[package]
name = "llm-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
async-trait.workspace = true
dashmap.workspace = true
futures.workspace = true
futures-util.workspace = true
reqwest.workspace = true
reqwest-eventsource.workspace = true
snafu.workspace = true
serde.workspace = true
serde_json.workspace = true